# Ass1---17.11.17

Ass1/: CMakeLists.txt  makefile
Ass1/include/: Commands.h  Environment.h  Files.h
Ass1/src/: BaseCommand.cpp  BaseFile.cpp  Commands.cpp  Directory.cpp  Environment.cpp  FileTest2.cpp  Files.cpp  HistoryCommand.cpp  RmCommand.cpp  generalFunctions.cpp  rename.cpp  testMain.cpp
